--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <p><h3>OBODOECHI VESTINA CHINWE</h3></p>
-    <img src="https://github.com/Chinamunwa/vestina/blob/main/vestypassport.jpg?raw=trueg" alt="passport">
+    <img src="https://github.com/Chinamunwa/vestina/blob/main/vestypassport.jpg?raw=true" alt="passport">
 
 
     <p><h2>Economist</h2></p>
