--- a/meet me.html
+++ b/meet me.html
@@ -22,7 +22,7 @@
           <p><em> Life is about how many lifes you help find meaning.</em>
 <br> I have great passion for creativity and growth,<br> diligence and positive attitude to work: <br> call me if you are honest
        </p>
-       <a href="F:/All Documents/Grasper.html">Grasper</a>
+       <a href="https://github.com/Chinamunwa/vestina/blob/main/Grasper.html">Grasper</a>
 
     
 </body>
