--- a/Grasper.html
+++ b/Grasper.html
@@ -6,8 +6,8 @@
     <title>Grasper</title>
 </head>
 <body>
-    <a href="F:All Documents/Refree Documents/web/Chinamunwa/meet me.html">Grasper</a>
-    <a href="F:/All Documents/Refree Documents/web/Chinamunwa/index.html"></a>
+    <a href="https://github.com/Chinamunwa/vestina/blob/main/meet%20me.html">Grasper</a>
+    <a href="">Grasper</a>
     
 </body>
 </html>
