--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p>State of Origin: Enugu</p>
 <p>Marital Status: Single </p>
 <p>Gender: Female</p>
-    <p><strong>Personal Statement:</strong>An Economics graduate with 2:1 honoSrs degree from Godfrey Okoye University, looking to secure a position capable of bringing out the best in me through quality service backed by skill and knowledge application, and at the same time, develops my communication, leadership and creative skills in a practical and fast-pace environment. I work towards sustainable growth and development, always striving to honestly make out the best of every opportunity given.
+    <p><strong>Personal Statement:</strong>An Economics graduate with 2:1 honoSrs degree from Godfrey Okoye University,<br>looking to secure a position capable of bringing out <br> the best in me through quality service backed by skill <br> and knowledge application, and at the same time,<br> develops my communication, leadership and <br> creative skills in a practical and fast-pace environment.<br> I work towards sustainable growth and development, always striving to honestly make out the best of <br> every opportunity given.
 
     </p>
     <hr>
