--- a/meet me.html
+++ b/meet me.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <a href="https://github.com/Chinamunwa/vestina/blob/main/Grasper.html">
+        <title>About me</title>
 </head>
 <body>
     
@@ -22,7 +23,7 @@
           <p><em> Life is about how many lifes you help find meaning.</em>
 <br> I have great passion for creativity and growth,<br> diligence and positive attitude to work: <br> call me if you are honest
        </p>
-       <a href="https://github.com/Chinamunwa/vestina/blob/main/Grasper.html">Grasper</a>
+       </a>
 
     
 </body>
