--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <p><a href="Rev.Fr. Chinedu.html"><h1>Rev.Fr.Barr.Chinedu Ralp Anieke</h1></a> <h2>08035794424</h2></p>
 <hr>
 <p>
-    <a href="https://github.com/Chinamunwa/vestina/blob/main/meet me.html">click on Grasper to see my other details</a>
+    <a href="https://github.com/Chinamunwa/vestina/blob/main/my%20profile.docx">click on Grasper to see my other details</a>
 </p>
 </body>
 </html>
